--- a/javascript-learn/webAPI/第二天/04---事件对象.html
+++ b/javascript-learn/webAPI/第二天/04---事件对象.html
@@ -26,6 +26,9 @@
         input.addEventListener('keyup', function (e) {
             console.log(e.type);
             console.log(e.key); // 按的键
+            if (e.key === 'Enter') {
+                console.log('按了回车键');
+            }
         })
     </script>
 </body>
