--- a/javascript-learn/webAPI/第三天/05---页面加载事件.html
+++ b/javascript-learn/webAPI/第三天/05---页面加载事件.html
@@ -20,6 +20,13 @@
                 console.log('img loaded');
             })
         })
+
+        document.addEventListener('DOMContentLoaded', function () {
+            const button = document.querySelector('button')
+            button.addEventListener('click', function () {
+                console.log('window loaded');
+            })
+        })
     </script>
 </head>
 
