--- a/javascript-learn/webAPI/第三天/01---捕获与冒泡.html
+++ b/javascript-learn/webAPI/第三天/01---捕获与冒泡.html
@@ -26,7 +26,7 @@
     </div>
 
     <script>
-        const html = document.querySelector('html')
+        const html = document.documentElement
         // const body = document.querySelector('body')
         const father = document.querySelector('.father')
         const son = document.querySelector('.son')
