--- a/javascript-learn/webAPI/第三天/08---元素宽高.html
+++ b/javascript-learn/webAPI/第三天/08---元素宽高.html
@@ -16,7 +16,7 @@
             overflow: scroll;
 
             padding: 10px;
-            display: none;
+            /* display: none; */
         }
     </style>
 </head>
