--- a/javascript-learn/webAPI/第三天/12---日期对象.html
+++ b/javascript-learn/webAPI/第三天/12---日期对象.html
@@ -25,9 +25,9 @@
         console.log(date.getMinutes());
         console.log(date.getSeconds());
 
-        console.log(date.toLocaleString());
-        console.log(date.toLocaleDateString());
-        console.log(date.toLocaleTimeString());
+        console.log(date.toLocaleString()); // 7/21/2024, 11:50:54
+        console.log(date.toLocaleDateString()); // 7/21/2024
+        console.log(date.toLocaleTimeString()); // 11:52:09
     </script>
 </body>
 
