--- a/javascript-learn/webAPI/第三天/13---时间戳.html
+++ b/javascript-learn/webAPI/第三天/13---时间戳.html
@@ -13,12 +13,14 @@
     <script>
         // 第一种方法
         let date = new Date()
+        date = new Date('2022-3-1 19: 36: 59')
         console.log(date.getTime());
 
         // 第二种方法
         console.log(+new Date());
+        console.log(+new Date('2022-3-1 19: 36: 59'));
 
-        // 第三种方法
+        // 第三种方法 只能获得当前时间的时间戳
         console.log(Date.now());
     </script>
 </body>
