--- a/javascript-learn/test.html
+++ b/javascript-learn/test.html
@@ -8,12 +8,22 @@
 </head>
 
 <body>
-
-    <script>
-        let age = 10
-        age = age + 1
-        console.log(age);
-    </script>
+    <form class="info">
+        姓名：<input type="text" class="name" name="name">
+        年龄：<input type="text" class="age" name="age">
+        性别：
+        <select name="gender" class="gender">
+            <option value="男">男</option>
+            <option value="女">女</option>
+        </select>
+        薪资：<input type="salary" class="salary" name="salary">
+        城市：
+        <select name="city" class="city">
+            <option value="北京">北京</option>
+            <option value="深圳">深圳</option>
+        </select>
+        <button class="add">提交</button>
+    </form>
 </body>
 
 </html>
