--- a/javascript-learn/webAPI/第四天/学生信息表/学生信息表案例.html
+++ b/javascript-learn/webAPI/第四天/学生信息表/学生信息表案例.html
@@ -60,7 +60,56 @@
     </tbody>
   </table>
   <script>
+    const arr = []
+    const tbody = document.querySelector('tbody')
+    const info = document.querySelector('.info')
+    const uname = document.querySelector('.uname')
+    const age = document.querySelector('.age')
+    const gender = document.querySelector('.gender')
+    const salary = document.querySelector('.salary')
+    const city = document.querySelector('.city')
 
+    function render() {
+      tbody.innerHTML = ''
+      for (let i = 0; i < arr.length; i++) {
+        const tr = document.createElement('tr')
+        tr.innerHTML = `
+            <td>${arr[i].stuId}</td>
+            <td>${arr[i].uname}</td>
+            <td>${arr[i].age}</td>
+            <td>${arr[i].gender}</td>
+            <td>${arr[i].salary}</td>
+            <td>${arr[i].city}</td>
+            <td>
+              <a href="javascript:" data-id='${i}'>删除</a>
+            </td>
+        `
+        tbody.appendChild(tr)
+      }
+      // console.log(arr);
+    }
+
+    info.addEventListener('submit', function (e) {
+      e.preventDefault()
+      const obj = {
+        stuId: arr.length,
+        uname: uname.value,
+        age: age.value,
+        gender: gender.value,
+        salary: salary.value,
+        city: city.value,
+      }
+      arr.push(obj)
+      info.reset()
+      render()
+    })
+
+    tbody.addEventListener('click', function (e) {
+      if (e.target.tagName === 'A') {
+        arr.splice(e.target.dataset.id, 1)
+        render()
+      }
+    })
   </script>
 
 </body>
