--- a/javascript-learn/webAPI/第五天/02---location对象.html
+++ b/javascript-learn/webAPI/第五天/02---location对象.html
@@ -18,6 +18,14 @@
         console.log(location.href);
         // 对其赋值时用于地址的跳转
         location.href = 'https://www.gnu.org'
+        // 获取问号及后面的部分
+        console.log(location.search);
+        // 获取井号及后面的部分
+        console.log(location.hash);
+        // 刷新当前页面
+        location.reload()
+        // 强制刷新当前页面
+        location.reload(true)
     </script>
 </body>
 
