--- a/javascript-learn/webAPI/第五天/05---localStorage对象.html
+++ b/javascript-learn/webAPI/第五天/05---localStorage对象.html
@@ -17,6 +17,12 @@
         console.log(localStorage.getItem('name'));
         // 删
         localStorage.removeItem('name')
+        // 改
+        localStorage.setItem('name', 'bbb')
+
+        // localStorage存储的是字符串
+        localStorage.setItem('age', 18)
+        console.log(localStorage.getItem('age'));
     </script>
 </body>
 
