--- a/javascript-learn/webAPI/第五天/07---数组的map方法.html
+++ b/javascript-learn/webAPI/第五天/07---数组的map方法.html
@@ -12,6 +12,8 @@
 <body>
     <script>
         const arr = ['red', 'blue', 'green']
+        // 返回一个新数组
+        // 参数为元素和下标
         const newArr = arr.map(function (ele, index) {
             console.log(ele);
             console.log(index);
