--- a/javascript-learn/webAPI/第六天/01---正则表达式.html
+++ b/javascript-learn/webAPI/第六天/01---正则表达式.html
@@ -11,8 +11,8 @@
 
 <body>
     <script>
-        const str = 'We are family.'
-        const reg = /are/
+        let str = 'We are family.'
+        let reg = /are/
         // 匹配到则返回true，没匹配到则返回false
         console.log(reg.test(str));
         // 匹配到则返回数组，没匹配到则返回null
@@ -138,6 +138,24 @@
         console.log(/^.$/.test('aa')); // false
         console.log(/^.$/.test('A')); // true
         console.log(/^.$/.test('5')); // true
+        console.log('-----------------------------------------');
+        // \d 相当于[0-9]
+        // \D 相当于[^0-9]
+        // \w 相当于[a-zA-Z0-9_]
+        // \W 相当于[^a-zA-Z0-9_]
+        // \s 相当于[\t\r\n\v\f]
+        // \S 相当于[^\t\r\n\v\f]
+        console.log('-----------------------------------------');
+        // 修饰符i 表示不区分大小写
+        console.log(/^a$/i.test('a')); // true
+        console.log(/^a$/i.test('A')); // true
+        // 修饰符g 表示全局匹配
+        str = 'we are family, they ARe friends.'
+        console.log(str.replace(/are/ig, 'are not'));
+        // | 表示或
+        console.log(/^are|ARE$/.test('are')); // true
+        console.log(/^are|ARE$/.test('ARE')); // true
+        console.log(/^are|ARE$/.test('Are')); // false
     </script>
 </body>
 
