--- a/javascript-learn/webAPI/第六天/注册登陆/register.html
+++ b/javascript-learn/webAPI/第六天/注册登陆/register.html
@@ -200,19 +200,134 @@
     </div>
   </div>
   <script>
+    // 发送短信验证码
     let resendCodeTimer = null
     const sendCode = document.querySelector('.code')
+    let isResendCodeClickable = true
     sendCode.addEventListener('click', function () {
-      let resendCodeSecond = 5
-      sendCode.innerHTML = `${resendCodeSecond}秒后重新获取`
-      resendCodeTimer = setInterval(function () {
-        resendCodeSecond--
+      if (isResendCodeClickable) {
+        isResendCodeClickable = false
+        let resendCodeSecond = 3
         sendCode.innerHTML = `${resendCodeSecond}秒后重新获取`
-        if (resendCodeSecond === 0) {
-          sendCode.innerHTML = '发送验证码'
-          clearInterval(resendCodeTimer)
-        }
-      }, 1000)
+        resendCodeTimer = setInterval(function () {
+          resendCodeSecond--
+          sendCode.innerHTML = `${resendCodeSecond}秒后重新获取`
+          if (resendCodeSecond === 0) {
+            sendCode.innerHTML = '发送验证码'
+            clearInterval(resendCodeTimer)
+            isResendCodeClickable = true
+          }
+        }, 1000)
+      }
+    })
+
+
+    // 验证用户名
+    const username = document.querySelector('input[name="username"]')
+    function validUsername() {
+      const msg = username.nextElementSibling
+      const reg = /^[a-zA-Z0-9-_]{6,10}$/
+      if (!reg.test(username.value)) {
+        msg.innerHTML = '输入不合法,请输入6~10位'
+        return false
+      }
+      msg.innerHTML = ''
+      return true
+    }
+    username.addEventListener('change', validUsername)
+
+
+    // 验证手机号
+    const phone = document.querySelector('input[name="phone"]')
+    function validPhone() {
+      const msg = phone.nextElementSibling
+      const reg = /^1(3\d|4[5-9]|5[0-35-9]|6[567]|7[0-8]|8\d|9[0-35-9])\d{8}$/
+      if (!reg.test(phone.value)) {
+        msg.innerHTML = '输入不合法,请输入6~10位'
+        return false
+      }
+      msg.innerHTML = ''
+      return true
+    }
+    phone.addEventListener('change', validPhone)
+
+
+    // 验证短信验证码
+    const code = document.querySelector('input[name="code"]')
+    function validCode() {
+      const msg = code.nextElementSibling
+      const reg = /^\d{6}$/
+      if (!reg.test(code.value)) {
+        msg.innerHTML = '输入不合法,请输入6~10位'
+        return false
+      }
+      msg.innerHTML = ''
+      return true
+    }
+    code.addEventListener('change', validCode)
+
+
+    // 验证短信验证码
+    const password = document.querySelector('input[name="password"]')
+    function validPassword() {
+      const msg = password.nextElementSibling
+      const reg = /^[a-zA-Z0-9-_]{6,20}$/
+      if (!reg.test(password.value)) {
+        msg.innerHTML = '输入不合法,请输入6~20位'
+        return false
+      }
+      msg.innerHTML = ''
+      return true
+    }
+    password.addEventListener('change', validPassword)
+
+
+    // 验证短信验证码
+    const confirm = document.querySelector('input[name="confirm"]')
+    function validConfirm() {
+      const msg = confirm.nextElementSibling
+      if (confirm.value !== password.value) {
+        msg.innerHTML = '两次密码输入不一致'
+        return false
+      }
+      msg.innerHTML = ''
+      return true
+    }
+    confirm.addEventListener('change', validConfirm)
+
+
+
+    // 勾选已阅读
+    const queren = document.querySelector('.icon-queren')
+    queren.addEventListener('click', function () {
+      queren.classList.toggle('icon-queren2')
+    })
+
+
+
+    // 提交表单
+    const form = document.querySelector('form')
+    form.addEventListener('submit', function (e) {
+      const querenChecked = document.querySelector('.icon-queren2')
+      if (!querenChecked) {
+        e.preventDefault()
+        alert('请勾选协议')
+      }
+      if (!validUsername) {
+        e.preventDefault()
+      }
+      if (!validPhone) {
+        e.preventDefault()
+      }
+      if (!validCode) {
+        e.preventDefault()
+      }
+      if (!validPassword) {
+        e.preventDefault()
+      }
+      if (!validConfirm) {
+        e.preventDefault()
+      }
     })
   </script>
 </body>
