--- a/javascript-learn/javascript进阶/第一天/06---展开运算符.html
+++ b/javascript-learn/javascript进阶/第一天/06---展开运算符.html
@@ -11,6 +11,16 @@
     <script>
         let arr = [1, 2, 3]
         console.log(...arr);
+
+        // 求数组中的最大/小值
+        console.log(Math.max(...arr));
+        console.log(Math.min(...arr));
+
+        // 合并数组
+        let arr1 = [4, 5, 6]
+        let arr2 = [...arr, ...arr1]
+        console.log(arr2);
+        
     </script>
 </body>
 
