--- a/javascript-learn/javascript进阶/第一天/07---箭头函数.html
+++ b/javascript-learn/javascript进阶/第一天/07---箭头函数.html
@@ -35,9 +35,19 @@
         fn = x => x + x
         console.log(fn(111))
 
-        // 可以返回一个对象
+        // 可以返回一个对象 要用小括号包起来
         fn = uname => ({ uname: uname })
         console.log(fn('aaa'))
+
+        // 有剩余参数没有动态参数
+        fn = (...arr) => {
+            let sum = 0
+            for (let i = 0; i < arr.length; i++) {
+                sum += arr[i]
+            }
+            return sum
+        }
+        console.log(fn(1, 2, 3))
     </script>
 </body>
 
