--- a/javascript-learn/javascript进阶/第一天/08---数组解构.html
+++ b/javascript-learn/javascript进阶/第一天/08---数组解构.html
@@ -86,6 +86,14 @@
             console.log(d)
             console.log('------------------------------------------')
         }
+
+        {
+            // 对象数组
+            const [{ uname, age }] = [{ uname: 'aaa', age: 5 }]
+            console.log(uname)
+            console.log(age)
+            console.log('------------------------------------------')
+        }
     </script>
 </body>
 
