--- a/javascript-learn/javascript进阶/第一天/15---数组实例方法.html
+++ b/javascript-learn/javascript进阶/第一天/15---数组实例方法.html
@@ -12,21 +12,21 @@
         {
             const arr = [2, 3, 5]
 
-            console.log(arr.reduce((prev, current) => prev + current))
-            console.log(arr.reduce((prev, current) => prev + current, 10))
+            console.log(arr.reduce((prev, item) => prev + item))
+            console.log(arr.reduce((prev, item) => prev + item, 10))
 
-            console.log(arr.reduce((prev, current) => prev * current))
-            console.log(arr.reduce((prev, current) => prev * current, 10))
+            console.log(arr.reduce((prev, item) => prev * item))
+            console.log(arr.reduce((prev, item) => prev * item, 10))
             console.log('-------------------------------------------')
         }
 
         {
             const arr = [{ name: 'aaa', salary: 100 }, { name: 'bbb', salary: 100 }, { name: 'ccc', salary: 100 }]
-            console.log(arr.reduce((prev, current) => prev + current.salary, 0))
+            console.log(arr.reduce((prev, item) => prev + item.salary, 0))
 
             const emptyArr = []
-            console.log(emptyArr.reduce((prev, current) => prev + current.salary, 0)) // 得到0而不是undefined，因为 reduce 方法对一个空数组进行操作时，如果提供了 initialValue ，那么 reduce 方法会直接返回这个 initialValue 而不会执行回调函数
-            // console.log(emptyArr.reduce((prev, current) => prev + current.salary)) // 报错：TypeError: reduce of empty array with no initial value
+            console.log(emptyArr.reduce((prev, item) => prev + item.salary, 0)) // 得到0而不是undefined，因为 reduce 方法对一个空数组进行操作时，如果提供了 initialValue ，那么 reduce 方法会直接返回这个 initialValue 而不会执行回调函数
+            // console.log(emptyArr.reduce((prev, item) => prev + item.salary)) // 报错：TypeError: reduce of empty array with no initial value
             console.log('-------------------------------------------')
 
         }
