--- a/javascript-learn/javascript进阶/第一天/21---数字实例方法.html
+++ b/javascript-learn/javascript进阶/第一天/21---数字实例方法.html
@@ -32,6 +32,11 @@
             console.log(little.toFixed(2))
             console.log('-------------------------------------------')
         }
+
+        {
+            console.log((111).toString())
+            console.log('-------------------------------------------')
+        }
     </script>
 </body>
 
