--- a/javascript-learn/javascript进阶/第一天/21---数字实例方法.html
+++ b/javascript-learn/javascript进阶/第一天/21---数字实例方法.html
@@ -34,7 +34,8 @@
         }
 
         {
-            console.log((111).toString())
+            const num = 10.4
+            console.log(num.toString())
             console.log('-------------------------------------------')
         }
     </script>
