--- a/javascript-learn/javascript进阶/第二天/06---原型链.html
+++ b/javascript-learn/javascript进阶/第二天/06---原型链.html
@@ -23,6 +23,30 @@
 
             console.log('-------------------------------------------')
         }
+
+        {
+            const arr = new Array()
+
+            console.log(arr.__proto__ === Array.prototype) // true
+            console.log(Array.prototype.constructor === Array) // true
+            console.log(Array.prototype.__proto__ === Object.prototype) // true
+            console.log(Object.prototype.constructor === Object) // true
+            console.log(Object.prototype.__proto__ === null) // true
+
+            console.log('-------------------------------------------')
+        }
+
+        {
+            const arr = []
+
+            console.log(arr.__proto__ === Array.prototype) // true
+            console.log(Array.prototype.constructor === Array) // true
+            console.log(Array.prototype.__proto__ === Object.prototype) // true
+            console.log(Object.prototype.constructor === Object) // true
+            console.log(Object.prototype.__proto__ === null) // true
+
+            console.log('-------------------------------------------')
+        }
     </script>
 </body>
 
