--- a/javascript-learn/javascript进阶/第三天/01---浅拷贝.html
+++ b/javascript-learn/javascript进阶/第三天/01---浅拷贝.html
@@ -18,8 +18,8 @@
             }
 
             const second = first
-            second.name = 'second'
-            second.food.rice = 'second'
+            second.name = 'second' // 会影响到原对象
+            second.food.rice = 'second' // 操作复杂数据类型会影响到原对象
 
             console.log(first)
             console.log(second)
@@ -37,7 +37,7 @@
 
             const second = { ...first }
             second.name = 'second'
-            second.food.rice = 'second'
+            second.food.rice = 'second' // 操作复杂数据类型会影响到原对象
 
             console.log(first)
             console.log(second)
@@ -56,7 +56,7 @@
             const second = {}
             Object.assign(second, first)
             second.name = 'second'
-            second.food.rice = 'second'
+            second.food.rice = 'second' // 操作复杂数据类型会影响到原对象
 
             console.log(first)
             console.log(second)
