--- a/test/test.html
+++ b/test/test.html
@@ -8,21 +8,39 @@
 </head>
 
 <body>
-    <script>
-        const hand = {
-            name: 'aaa',
-            age: 18
-        }
-        const foot = ['a', 'b', 'c']
-        function Obj(hand, foot) {
-            this.hand = hand
-            this.foot = foot
-        }
-        const a = new Obj(hand, foot)
-        const b = new Obj(hand, foot)
+    <button class="button1">按钮1</button>
+    <button class="button2">按钮2</button>
+    <button class="button3">按钮3</button>
+    <button class="button4">按钮4</button>
 
-        console.log(a.hand === b.hand)
-        console.log(a.foot === b.foot)
+    <script>
+        {
+            document.querySelector('.button2').addEventListener('click', () => {
+                console.log(this) // window
+                setTimeout(function () {
+                    console.log(this) // window
+                }, 10)
+            })
+            console.log('--------------------------------------')
+        }
+        {
+            document.querySelector('.button3').addEventListener('click', function () {
+                console.log(this) // button
+                setTimeout(() => {
+                    console.log(this) // button
+                }, 10)
+            })
+            console.log('--------------------------------------')
+        }
+        {
+            document.querySelector('.button4').addEventListener('click', () => {
+                console.log(this) // window
+                setTimeout(() => {
+                    console.log(this) // window
+                }, 10)
+            })
+            console.log('--------------------------------------')
+        }
     </script>
 </body>
 
