--- a/test/test.html
+++ b/test/test.html
@@ -2,44 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+        .box2 {
+            width: 500px;
+            height: 500px;
+            background-color: green;
+            color: #fff;
+            text-align: center;
+            font-size: 100px;
+        }
+    </style>
 </head>
 
 <body>
-    <button class="button1">按钮1</button>
-    <button class="button2">按钮2</button>
-    <button class="button3">按钮3</button>
-    <button class="button4">按钮4</button>
+    <div class="box2">0</div>
 
     <script>
+
         {
-            document.querySelector('.button2').addEventListener('click', () => {
-                console.log(this) // window
-                setTimeout(function () {
-                    console.log(this) // window
-                }, 10)
-            })
-            console.log('--------------------------------------')
-        }
-        {
-            document.querySelector('.button3').addEventListener('click', function () {
-                console.log(this) // button
-                setTimeout(() => {
-                    console.log(this) // button
-                }, 10)
-            })
-            console.log('--------------------------------------')
-        }
-        {
-            document.querySelector('.button4').addEventListener('click', () => {
-                console.log(this) // window
-                setTimeout(() => {
-                    console.log(this) // window
-                }, 10)
-            })
-            console.log('--------------------------------------')
+            let timer = null
+
+            timer = setTimeout(function () {
+                clearTimeout(timer)
+            }, 100)
+
+            setTimeout(() => {
+                console.log(timer)
+            }, 1000);
         }
     </script>
 </body>
